maint(all) Upgrade to scala 2.13 and 2.6.21